[package]
name = "an-app-has-no-name"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.44", features = ["serde"] }
clap = { version = "4.6.1", features = ["derive"] }
ldap3 = { version = "0.12.1", features = ["gssapi"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.52.3", features = ["full"] }
uuid = { version = "1.23.1", features = ["serde", "v4"] }
anyhow = "1.0.102"
config = "0.15.23"
diff = "0.1.13"
tracing = "0.1.44"
axum = "0.8.9"
tracing-subscriber = { version = "0.3.23" ,features=["env-filter"]}
quick-xml = { version = "0.40.1", features = ["async-tokio", "encoding"] }
oxicode = { version = "0.2.3", features = ["derive"] }
colored = "3.1.1"
indicatif = "0.18.4"
log = "0.4.29"
bitflags = "2.11.1"
regex = "1.12.3"
sha1 = "0.11.0"
hex = "0.4.3"
serde-saphyr = { version="0.0.26", default-features=true}