[package]
name = "altered-state"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.44", features = ["serde"] }
clap = { version = "4.6.1", features = ["derive"] }
ldap3 = { version = "0.12.1", features = ["gssapi"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["full"] }
anyhow = "1.0.102"
config = "0.15.23"
tracing = "0.1.44"
axum = "0.8.9"
tracing-subscriber = { version = "0.3.23" ,features=["env-filter"]}
oxicode = { version = "0.2.3", features = ["compression-zstd", "derive", "serde"] }
colored = "3.1.1"
indicatif = "0.18.4"
log = "0.4.30"
bitflags = "2.11.1"
regex = "1.12.3"
sha1 = "0.11.0"
hex = "0.4.3"
clap-verbosity-flag = { version = "3.0.4", default-features = false, features = ["tracing"] }
base64 = "0.22.1"
itertools = "0.14.0"
tower-http = { version = "0.6.11", features = ["fs"] }

["build-dependencies"]
omnicopy_to_output = "0.3.0"

[profile.release]
codegen-units = 1 # Allows compiler to perform better optimization.
lto = true # Enables Link-time Optimization.
opt-level = "s" # Prioritizes small binary size. Use `3` if you prefer speed.
strip = true # Ensures debug symbols are removed.
